--- a/src/components/MainPage.module.css
+++ b/src/components/MainPage.module.css
@@ -1,7 +1,8 @@
 .mainPage {
   width: 100%;
-  display: flex;
   max-width: 1700px;
+  min-height: 100vh;
+  display: flex;
   background-color: white;
   margin: 0 auto;
 }
