--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
   height: 10vh;
   background-color: #111827;
 }
@@ -38,6 +37,13 @@
   }
 
   .logo {
-    height: 40%;
+    height: 60%;
+    margin: 0 auto;
+  }
+}
+
+@media ((max-height: 500px) and (orientation: landscape)) {
+  .header {
+    height: 35vh;
   }
 }
