--- a/src/features/cart/CartItem.module.css
+++ b/src/features/cart/CartItem.module.css
@@ -31,6 +31,7 @@
   font-size: 22px;
   font-weight: bold;
 }
+
 .itemInfo p {
   margin: 10px 0;
 }
@@ -59,8 +60,26 @@
     font-size: 15px;
   }
 }
+
 @media (max-width: 500px) {
   .itemImageContainer {
     height: 50%;
+  }
+
+  .itemInfo p:nth-of-type(1) {
+    font-size: 18px;
+  }
+
+  .itemInfo p:not(:nth-of-type(1)) {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 400px) {
+  .itemInfo p:nth-of-type(1) {
+    font-size: 15px;
+  }
+  .itemInfo p:not(:nth-of-type(1)) {
+    font-size: 12px;
   }
 }
